# involute-gear

./: CMakeLists.txt  README.md
involute-gears/: CMakeLists.txt  README.md
src/: first-test.cpp  main.cpp  second-test.cpp
src/nostalgia/: first-test.cpp  second-test.cpp
